Fixed button and image spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -107,8 +107,8 @@ ul li {
     height: auto;
     font-size: 2vw;
     display: block;
-    max-width: 200px;
-    max-height: 200px;
+    max-width: 20vw;
+    max-height: 10vw;
     margin: 25px 0px;
     text-align: center;
     padding-left: 20px;
@@ -128,7 +128,7 @@ ul li {
 
 .btn {
     border: 0;
-    width: 25vw;
+    width: 35vw;
     height: 10vh;
     font-size: 2vw;
     display: flex;
@@ -651,17 +651,11 @@ ul li {
     transform: scale(0.9);
 }
 
-.tier1 {
-}
-
-.partner {
-}
-
 .partner .partner-box {
     display: block;
     opacity: 1;
-    height: 150px;
-    width: 150px;
+    height: 350px;
+    width: 350px;
     margin: 25px auto;
     -webkit-transition: 0.5s all linear;
     transition: 0.5s all linear;
@@ -1121,6 +1115,11 @@ ph3 sponsors
 
 .teamD h2 {
     padding-top: 10px;
+}
+
+.btn-sponsor {
+    max-width: 30vw;
+    max-height: 10vw;
 }
 
 /* #registerButton:hover{
