--- a/assets/css/mobilecss.css
+++ b/assets/css/mobilecss.css
@@ -90,15 +90,9 @@
         font-size: 3vw;
     }
 
-    #registerButton {
+    #registerButton, #devpostButton {
         height: 10vh;
-        width: 70vw;
-        font-size: 1em;
-    }
-
-    #devpostButton {
-        height: 10vh;
-        width: 70vw;
+        width: 50vw;
         font-size: 1em;
     }
 
@@ -126,7 +120,6 @@
     #sponsorText {
         font-size: 1.7em;
     }
-
 
     .tier1-2 {
         height: 60vw !important;
